# Phosphoros

./: .gitignore  CMakeLists.txt  ChangeLog.md  ChangeLog.txt  Makefile  Phosphoros.dox
PhzCLI/: CMakeLists.txt
PhzCLI/PhzCLI/: ComputeModelSedConfig.h  ComputeModelSedConfiguration.h  CreateFlatGridPriorConfig.h  DisplayModelGridConfig.h  DisplayModelGridConfiguration.h  DisplayTemplateConfiguration.h  DisplayTemplatesConfiguration.h  FitsToGridConfig.h  LsAuxConfiguration.h  LsAuxDirConfig.h  LsPhotometryGridConfiguration.h
PhzCLI/conf/PhzCLI/: CreateFlatGridPrior.conf  LsPhotometryGrid.conf  PhosphorosComputeModelSed.conf  PhosphorosComputeModelSet.conf  PhosphorosDisplayModelGrid.conf  PhosphorosLsAux.conf  PrintModelDataset.conf
PhzCLI/python/PhzCLI/: DataInterface.py  LikelihoodPlot.py  OrderSeds.py  Phosphoros.py  PhosphorosPlotPhotometryComparison.py  PlotFluxDifference.py  PlotPosterior.py  PlotSpecZComparison.py  SedHeaderHandler.py  SedUtils.py  TableUtils.py
PhzCLI/scripts/: Phosphoros  PhosphorosDisplayLikelihood  PhosphorosOrderSeds  PhosphorosPlotPosterior  PhosphorosPlotSpecZComparison  PhosphorosVsSpecZ
PhzCLI/src/: _DisplayModelGrid.cpp
PhzCLI/src/lib/: ComputeModelSedConfig.cpp  ComputeModelSedConfiguration.cpp  CreateFlatGridPriorConfig.cpp  DisplayModelGridConfig.cpp  DisplayModelGridConfiguration.cpp  DisplayTemplateConfiguration.cpp  DisplayTemplatesConfiguration.cpp  FitsToGridConfig.cpp  LsAuxDirConfig.cpp  LsPhotometryGridConfiguration.cpp  LxAuxConfiguration.cpp
PhzCLI/src/program/: ComputeModelSed.cpp  ComputeModelSet.cpp  CreateFlatGridPrior.cpp  DisplayDataset.cpp  DisplayModelGrid.cpp  DisplayTemplate.cpp  DisplayTemplates.cpp  FitsToGridConvertion.cpp  LsAux.cpp  LsPhotometryGrid.cpp  PrintModelDataset.cpp
PhzCLI/tests/src/: ComputeModelSedConfig_test.cpp  ConfigManager_fixture.h  CreateFlatGridPriorConfig_test.cpp  DisplayModelGridConfig_test.cpp  LsAuxDirConfig_test.cpp
PhzConfiguration/: CMakeLists.txt
PhzConfiguration/PhzConfiguration/: CalculatePhotometricCorrectionConfiguration.h  CatalogConfiguration.h  CreatePhotometryGridConfiguration.h  CreatePhzCatalogConfiguration.h  FilterConfiguration.h  LsPhotometryGridConfiguration.h  ParameterSpaceConfiguration.h  PhotometricCorrectionConfiguration.h  PhotometryCatalogConfiguration.h  PhotometryGridConfiguration.h  ReddeningConfiguration.h  RedshiftConfiguration.h  SedConfiguration.h  SpectroscopicRedshiftCatalogConfiguration.h
PhzConfiguration/doc/: PhzConfiguration.dox
PhzConfiguration/src/lib/: CalculatePhotometricCorrectionConfiguration.cpp  CatalogConfiguration.cpp  CheckString.h  CreatePhotometryGridConfiguration.cpp  CreatePhzCatalogConfiguration.cpp  FilterConfiguration.cpp  LsPhotometryGridConfiguration.cpp  PhotometricCorrectionConfiguration.cpp  PhotometryCatalogConfiguration.cpp  PhotometryGridConfiguration.cpp  ReddeningConfiguration.cpp  RedshiftConfiguration.cpp  SedConfiguration.cpp  SpectroscopicRedshiftCatalogConfiguration.cpp
PhzConfiguration/tests/src/: CalculatePhotometricCorrectionConfiguration_test.cpp  CatalogConfiguration_test.cpp  CreateDirectory.h  CreatePhotometryGridConfiguration_test.cpp  FilterConfiguration_test.cpp  ParameterSpaceConfiguration_test.cpp  PhotometryGridConfiguration_test.cpp  (+5 more)
PhzDataModel/: CMakeLists.txt
PhzDataModel/PhzDataModel/: FilterInfo.h  LikelihoodGrid.h  Pdf1D.h  PdfGrid.h  PhotometricCorrectionMap.h  PhotometryGrid.h  PhzModel.h
PhzDataModel/doc/: PhzDataModel.dox
PhzExecutables/: CMakeLists.txt
PhzLikelihood/: CMakeLists.txt
PhzLikelihood/PhzLikelihood/: CatalogHandler.h  ChiSquareFunctor.h  LikelihoodAlgorithm.h  MaxMarginalizationFunctor.h  ParallelCatalogHandler.h  ScaleFactorFunctor.h  SourcePhzFunctor.h  SumMarginalizationFunctor.h
PhzModeling/: CMakeLists.txt
PhzModeling/PhzModeling/: ApplyFilterFunctor.h  BuildFilterInfoFunctor.h  CalculateFluxFunctor.h  ExtinctionFunctor.h  IntegrateDatasetFunctor.h  ModelDatasetGenerator.h  ModelDatasetGrid.h  ModelFluxAlgorithm.h  PhotometryAlgorithm.h  PhotometryGridCreator.h  RedshiftFunctor.h
PhzPhotometricCorrection/: CMakeLists.txt
PhzPhotometricCorrection/PhzPhotometricCorrection/: BestFitModelMap.h  CalculateScaleFactorMap.h  DefaultStopCriteria.h  FindBestFitModels.h  FindMeanPhotometricCorrectionsFunctor.h  FindMedianPhotometricCorrectionsFunctor.h  FindWeightedMeanPhotometricCorrectionsFunctor.h  FindWeightedMedianPhotometricCorrectionsFunctor.h  PhotometricCorrectionAlgorithm.h  PhotometricCorrectionCalculator.h
PhzQtUI/: CMakeLists.txt  PhUI_Qt.pro
PhzQtUI/PhzQtUI/: BoolItemDelegate.h  DataPackHandler.h  DataSetTreeModel.h  DatasetRepository.h  DatasetSelection.h  DialogAddGalEbv.h  DialogCatalogName.h  DialogConflictingFilesHandling.h  DialogCreatesSubGroup.h  DialogExtractZ.h  DialogFilterMapping.h  DialogFilterSelector.h  DialogFilterShiftGridGeneration.h  DialogGalCorrGridGeneration.h  DialogGridGeneration.h  DialogImportAuxData.h  DialogInterpolateSed.h  DialogLuminosityFunction.h  DialogLuminosityFunctionCurveSelector.h  DialogLuminosityFunctions.h  DialogLuminosityPrior.h  DialogLuminositySedGroup.h  DialogModelSet.h  DialogNz.h  DialogOptions.h  DialogOutputColumnSelection.h  DialogPOP.h  DialogPSC.h  DialogPhotCorrectionEdition.h  DialogPhotometricCorrectionComputation.h  DialogPpPdf.h  DialogRange.h  DialogResid.h  DialogRunAnalysis.h  DialogSedParam.h  DialogSedSelector.h  DialogSelectParam.h  DialogZRanges.h  DialogZeroPointName.h  DirectoryTreeModel.h  (+39 more)
PhzUITools/: CMakeLists.txt
PhzUITools/PhzUITools/: CatalogColumnReader.h  ConfigurationWriter.h  InfoOnlyCellManager.h
QtUI/: CMakeLists.txt  PhUI_Qt.pro
QtUI/QtUI/: DialogFilterMapping.h  DialogImportAuxData.h  DialogModelSet.h  DialogPhotCorrectionEdition.h  FileUtils.h  FilterMapping.h  FilterModel.h  FormAnalysis.h  FormAuxDataManagement.h  FormModelSet.h  FormSurveyMapping.h  ModelSet.h  ModelSetModel.h  ModelSetTable.h  ParameterRule.h  ParameterRuleModel.h  ParameterRuleTable.h  Range.h  SurveyFilterMapping.h  SurveyModel.h  XYDataSetModel.h  XYDataSetTreeModel.h
(+311 files in other folders)
